# openvino-link-test

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.5D417FFA15A7443A.idx  ocl_ext.cpp.995B7057A5DFF23B.idx  ocl_ext.hpp.BC61B121793D8C78.idx
cmake/: FindSYCL.cmake
examples/: export_model.py  inp.npy  model.onnx  ref.npy
include/: ocl_ext.hpp
src/: main.cpp  ocl_ext.cpp
